# solana-day

./: .gitignore  .vercelignore  Anchor.toml  Cargo.toml  README.md  vercel.json
.cursor/rules/: blockchain.mdc
app/: next-env.d.ts  next.config.js  package-lock.json  package.json  pnpm-lock.yaml
app/src/app/: layout.tsx  page.tsx
app/src/components/: DepositForm.tsx  InitializeVault.tsx  VaultDashboard.tsx  VaultStats.tsx  WalletProvider.tsx  WithdrawForm.tsx
app/src/lib/: anchor.ts
cranker/: env.example  index.js  package-lock.json  package.json  pnpm-lock.yaml
programs/dca_vault/: Cargo.toml
programs/dca_vault/src/: lib.rs
