[package]
name = "dca_vault"
version = "0.1.0"
description = "Solana DCA Vault Program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "dca_vault"

[features]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"

